manifest/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: kube-system
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: shared-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:583857255987:certificate/d813fa79-31b4-4d72-953b-c9331be6bd67
  labels:
    app: application-nginx-ingress
spec:
  ingressClassName: alb
  rules:
    - host: oic.gnaig.click
      http:
        paths:
          - path: /*
            pathType: Prefix  
            backend:
              service:
                name: ops-inspiration-console-service
                port:
                  number: 80
